--- a/css/my-account.css
+++ b/css/my-account.css
@@ -439,6 +439,44 @@ html {
   margin-top: 37px;
   margin-bottom: 48px;
 }
+
+@media only screen and (min-width: 358px) and (max-width: 1924px) {
+  .form-container {
+    max-width: 418px;
+    padding-left: 24px;
+    padding-right: 24px;
+    margin: 0 auto;
+  }
+}
+
+.sign-in__subtext {
+  color: rgb(39, 39, 39);
+  font-family: Liberation Sans;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+}
+
+input {
+  width: 100%;
+  padding: 12px 16px;
+
+  margin-top: 8px;
+  box-sizing: border-box;
+  border: 1px solid rgba(94, 146, 182, 0.55);
+  border-radius: 10px;
+}
+
+input,
+input::placeholder {
+  color: rgb(39, 39, 39);
+  font-family: Liberation Sans;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.17;
+
+  text-align: left;
+}
 /*!======================================================*/
 /* FOOTER */
 
