--- a/css/my-account.css
+++ b/css/my-account.css
@@ -500,21 +500,17 @@ input::placeholder {
   color: rgb(160, 160, 160);
 }
 
-.input-form.last {
-  position: relative;
-  margin-bottom: 40px;
+.sign-in__subtext.two {
 }
 
-.input-form.last::after {
-  position: absolute;
+.sign-in__subtitle.two::before {
   content: '';
+  margin-bottom: 40px;
 
-  top: 0;
-  left: 0;
-
+  display: block;
   width: 100%;
   height: 1px;
-  color: #5e92b68c;
+  background-color: #5e92b68c;
 }
 
 /*!======================================================*/
