--- a/css/my-account.css
+++ b/css/my-account.css
@@ -149,8 +149,10 @@ html {
   margin-right: auto;
   padding-left: 16px;
   padding-right: 16px;
+  padding-bottom: 96px;
 
   min-width: 358px;
+
   /* outline: 1px solid red; */
 }
 
@@ -511,6 +513,53 @@ input::placeholder {
   width: 100%;
   height: 1px;
   background-color: #5e92b68c;
+}
+
+.interface-list__item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  color: #272727;
+  font-family: Liberation Sans;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.17;
+}
+
+.interface-list__item button {
+  border: none;
+  cursor: pointer;
+  background: transparent;
+  padding: 0;
+}
+
+.interface-list li {
+  margin-bottom: 24px;
+}
+
+.interface-list li:first-child .interface-list__item {
+  color: #5e92b6;
+}
+
+.interface-list li:first-child {
+  margin-top: 40px;
+}
+
+.no-rotate {
+  fill: #5e92b6;
+}
+
+.rotate-svg {
+  transform: rotate(180deg);
+}
+
+.log-out {
+  color: rgb(39, 39, 39);
+  font-family: Liberation Sans;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 1.17;
 }
 
 /*!======================================================*/
