--- a/css/my-account.css
+++ b/css/my-account.css
@@ -479,6 +479,13 @@ html {
   margin-top: 24px;
 }
 
+.sign-in.btn {
+  width: 100%;
+  background: #5e92b6;
+  margin-top: 53px;
+  margin-bottom: 8px;
+}
+
 input {
   width: 100%;
   padding: 12px 16px;
