--- a/css/home.css
+++ b/css/home.css
@@ -388,6 +388,59 @@ html {
   }
 }
 
+/* BURGER MENU */
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
+.menu-mobile-wrapper {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  position: relative;
+  height: 100%;
+  padding-top: 144px;
+  padding-bottom: 452px;
+  background-color: #3b619a;
+}
+
+.menu-mobile-wrapper > ul {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.menu-mobile-wrapper > ul > li:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.menu-mobile-wrapper > ul > li > a {
+  color: #fcfcfc;
+  font-family: Liberation Sans;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 1.16;
+}
+
+.btn-close {
+  background-color: #3b619a;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  border: 1px solid transparent;
+  cursor: pointer;
+
+  position: absolute;
+  top: 24px;
+  right: 24px;
+}
+
 /*SECTION HERO */
 
 .hero {
