--- a/css/home.css
+++ b/css/home.css
@@ -416,6 +416,12 @@ html {
   padding-top: 60px;
 }
 
+@media only screen and (min-width: 391px) and (max-width: 1770px) {
+  .menu-container.js-open-menu {
+    padding-top: 0;
+  }
+}
+
 .menu-mobile-wrapper {
   display: flex;
   align-items: center;
