--- a/css/home.css
+++ b/css/home.css
@@ -278,7 +278,7 @@ html {
 }
 
 .search-icon {
-  display: none;
+  /* display: none; */
 }
 
 @media only screen and (min-width: 1024px) and (max-width: 1925px) {
@@ -497,6 +497,60 @@ html {
     top: 30px;
     right: 17px;
   }
+}
+
+.modal-search-wrapper {
+  display: none;
+}
+
+.modal-search-wrapper.no-hidden {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  visibility: visible;
+  background-color: rgba(25, 25, 25, 0.49);
+}
+
+.modal {
+  position: absolute;
+  top: 65px;
+  left: 0;
+  /* max-width: 390px; */
+  padding-left: 16px;
+}
+
+.modal-search {
+  position: relative;
+}
+.modal-search-text {
+  padding: 10px 65px;
+  border-radius: 8px;
+
+  background: rgb(252, 252, 252);
+
+  color: rgb(160, 160, 160);
+  font-family: Liberation Sans;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.17;
+}
+
+.modal-search > .search-icon {
+  position: absolute;
+  top: 2px;
+  left: 24px;
+}
+
+.modal-search-text::placeholder {
+  color: rgb(160, 160, 160);
+  font-family: Liberation Sans;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.17;
 }
 
 /*SECTION HERO */
