--- a/css/home.css
+++ b/css/home.css
@@ -278,7 +278,7 @@ html {
 }
 
 .search-icon {
-  /* display: none; */
+  display: none;
 }
 
 @media only screen and (min-width: 1024px) and (max-width: 1925px) {
@@ -539,9 +539,9 @@ html {
   line-height: 1.17;
 }
 
-.modal-search > .search-icon {
+.modal-search > .search-icon-modal {
   position: absolute;
-  top: 2px;
+  top: 1px;
   left: 24px;
 }
 
