--- a/css/home.css
+++ b/css/home.css
@@ -545,6 +545,16 @@ html {
   left: 24px;
 }
 
+.btn-search {
+  position: absolute;
+  top: -1px;
+  left: 7px;
+  padding: 1px 12px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
+
 .modal-search-text::placeholder {
   color: rgb(160, 160, 160);
   font-family: Liberation Sans;
