--- a/css/home.css
+++ b/css/home.css
@@ -5,6 +5,9 @@
   --accent-color: #5e92b6;
   --red-color: #de4b53;
   --bg-color: #16344c;
+  --grey-color: #a0a0a0;
+  --hover-color: #b5e5f3;
+  --black-color: #000000;
 
   --main-font-family: 'Candal';
   --accent-font-family: 'Liberation Sans';
@@ -77,7 +80,7 @@ img {
 html {
   scroll-behavior: auto;
 }
-
+/*!==================================================
 /* Default style */
 
 .btn {
@@ -166,6 +169,8 @@ html {
   /* outline: 1px solid red; */
 }
 
+/*!=================================================*/
+
 @media only screen and (min-width: 391px) and (max-width: 1024px) {
   .container {
     min-width: 391px;
@@ -227,7 +232,7 @@ html {
     width: 325px;
     height: 40px;
 
-    color: rgb(160, 160, 160);
+    color: var(--grey-color);
     font-family: var(--accent-font-family);
     font-size: 18px;
     font-weight: 400;
@@ -235,14 +240,14 @@ html {
 
     padding-left: 34px;
     border-radius: 8px;
-    background: rgb(252, 252, 252);
+    background: var(--main-color);
   }
   .navigation-search-link {
     display: none;
   }
 
   .navigation-search::placeholder {
-    color: #a0a0a0;
+    color: var(--grey-color);
     font-family: var(--accent-font-family);
     font-size: 18px;
     font-weight: 400;
@@ -250,7 +255,7 @@ html {
   }
 }
 
-@media only screen and (min-width: 1025px) and (max-width: 1925px) {
+@media only screen and (min-width: 1025px) and (max-width: 1924px) {
   .navigation-search-container {
     right: 0;
     /* margin-left: 89px; */
@@ -261,7 +266,7 @@ html {
   display: none;
 }
 
-@media only screen and (min-width: 1025px) and (max-width: 1925px) {
+@media only screen and (min-width: 1025px) and (max-width: 1924px) {
   .navigation-main-list {
     display: flex;
     margin-right: auto;
@@ -269,7 +274,7 @@ html {
     margin-left: 6em;
   }
   .navigation-main-list__item-link {
-    color: rgb(252, 252, 252);
+    color: var(--main-color);
     font-family: var(--accent-font-family);
     font-size: 24px;
     font-weight: 700;
@@ -279,7 +284,12 @@ html {
   }
   .navigation-main-list__item-link:hover,
   .navigation-main-list__item-link:focus {
-    color: #b5e5f3;
+    color: var(--hover-color);
+  }
+  .navigation-main-list__item.summary {
+    display: flex;
+    align-items: baseline;
+    gap: 7px;
   }
 }
 
@@ -322,7 +332,7 @@ html {
 
   width: 153.43px;
   height: 32px;
-  background-color: black;
+  background-color: var(--black-color);
   border-radius: 0 0 20px 20px;
 
   display: inline-block;
@@ -338,7 +348,7 @@ html {
 
   text-align: center;
 
-  color: rgba(252, 252, 252, 1);
+  color: var(--main-color);
 }
 
 .navigation-list {
@@ -378,7 +388,7 @@ html {
   top: -12px;
   right: -12px;
   border-radius: 50px;
-  background: rgba(222, 75, 83, 1);
+  background: var(--red-color);
 
   font-size: 10px;
   display: flex;
@@ -391,7 +401,7 @@ html {
 
   width: 14px;
   height: 14px;
-  color: #ffffff;
+  color: var(--main-color);
   margin: 0 auto;
 }
 
@@ -406,7 +416,7 @@ html {
     display: none;
   }
 }
-
+/*!==================================================*/
 /* BURGER MENU */
 
 .menu-container {
