--- a/css/home.css
+++ b/css/home.css
@@ -703,6 +703,7 @@ html {
   line-height: 1.6;
 
   margin-top: 32px;
+  margin-bottom: 32px;
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1925px) {
