--- a/css/my-account.css
+++ b/css/my-account.css
@@ -1,5 +1,20 @@
+:root {
+  --main-color: #fcfcfc;
+  --title-color: #3b619a;
+  --subtitle-color: #787695;
+  --accent-color: #5e92b6;
+  --red-color: #de4b53;
+  --bg-color: #16344c;
+  --grey-color: #a0a0a0;
+  --hover-color: #b5e5f3;
+  --black-color: #000000;
+
+  --main-font-family: 'Candal';
+  --accent-font-family: 'Liberation Sans';
+}
+
 body {
-  font-family: 'Candal', sans-serif;
+  font-family: var(--main-font-family), sans-serif;
 }
 
 @media only screen and (min-width: 391px) and (max-width: 1024px) {
@@ -75,16 +90,16 @@ html {
   width: 224px;
   height: 40px;
 
-  font-family: Liberation Sans;
+  font-family: var(--accent-font-family);
   font-size: 16px;
   font-weight: 700;
 
   padding: 8px 65px;
 
-  border: 1px solid #fcfcfc;
+  border: 1px solid var(--main-color);
   border-radius: 8px;
   background: transparent;
-  color: #fcfcfc;
+  color: var(--main-color);
 
   cursor: pointer;
 }
@@ -151,7 +166,6 @@ html {
   padding-right: 16px;
 
   min-width: 358px;
-
   /* outline: 1px solid red; */
 }
 
@@ -194,12 +208,19 @@ html {
 }
 
 .navigation {
-  background-color: #16344c;
+  background-color: var(--bg-color);
   min-width: 390px;
 }
 
 .navigation-search {
   display: none;
+}
+
+.navigation-search-link {
+  margin-left: 16px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 .Search {
@@ -217,33 +238,26 @@ html {
     width: 325px;
     height: 40px;
 
-    color: rgb(160, 160, 160);
-    font-family: Liberation Sans;
+    color: var(--grey-color);
+    font-family: var(--accent-font-family);
     font-size: 18px;
     font-weight: 400;
     line-height: 1.17;
 
     padding-left: 34px;
     border-radius: 8px;
-    background: rgb(252, 252, 252);
+    background: var(--main-color);
   }
   .navigation-search-link {
     display: none;
   }
 
   .navigation-search::placeholder {
-    color: #a0a0a0;
+    color: var(--grey-color);
     font-family: Liberation Sans;
     font-size: 18px;
     font-weight: 400;
     line-height: 1.17;
-  }
-}
-
-@media only screen and (min-width: 1025px) and (max-width: 1925px) {
-  .navigation-search-container {
-    right: 0;
-    margin-left: 89px;
   }
 }
 
@@ -251,7 +265,18 @@ html {
   display: none;
 }
 
-@media only screen and (min-width: 1025px) and (max-width: 1925px) {
+@media only screen and (min-width: 1025px) and (max-width: 1924px) {
+  .navigation-search-container {
+    right: 0;
+    /* margin-left: 89px; */
+  }
+}
+
+.navigation-main-list {
+  display: none;
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1924px) {
   .navigation-main-list {
     display: flex;
     align-items: baseline;
@@ -262,8 +287,8 @@ html {
   .navigation-main-list__item-link {
     position: relative;
 
-    color: rgb(252, 252, 252);
-    font-family: Liberation Sans;
+    color: var(--main-color);
+    font-family: var(--accent-font-family);
     font-size: 24px;
     font-weight: 700;
     line-height: 1.1;
@@ -272,7 +297,7 @@ html {
   }
   .navigation-main-list__item-link:hover,
   .navigation-main-list__item-link:focus {
-    color: #b5e5f3;
+    color: var(--hover-color);
   }
 
   .navigation-main-list__item.summary {
@@ -321,7 +346,7 @@ html {
 
   width: 153.43px;
   height: 32px;
-  background-color: black;
+  background-color: var(--black-color);
   border-radius: 0 0 20px 20px;
 
   display: inline-block;
@@ -337,7 +362,7 @@ html {
 
   text-align: center;
 
-  color: rgba(252, 252, 252, 1);
+  color: var(--main-color);
 }
 
 .navigation-list {
@@ -350,11 +375,11 @@ html {
   margin-left: auto;
 }
 
-@media only screen and (min-width: 1025px) and (max-width: 1925px) {
+/* @media only screen and (min-width: 1025px) and (max-width: 1925px) {
   .navigation-list {
     margin-left: 0;
   }
-}
+} */
 
 @media only screen and (min-width: 1024px) and (max-width: 1770px) {
   .list-item.last {
@@ -377,7 +402,7 @@ html {
   top: -12px;
   right: -12px;
   border-radius: 50px;
-  background: rgba(222, 75, 83, 1);
+  background: var(--red-color);
 
   font-size: 10px;
   display: flex;
@@ -390,14 +415,182 @@ html {
 
   width: 14px;
   height: 14px;
-  color: #ffffff;
+  color: var(--main-color);
   margin: 0 auto;
+}
+
+.burger-btn {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1924px) {
   .burger-btn {
     display: none;
   }
+}
+/*!==================================================*/
+/* BURGER MENU */
+
+.menu-container {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
+.menu-mobile-wrapper > .navigation-logo {
+  position: absolute;
+  top: -17px;
+  left: 16px;
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1924px) {
+  .menu-mobile-wrapper > .navigation-logo {
+    top: 0;
+  }
+}
+
+.menu-container.js-open-menu {
+  display: block;
+  padding-top: 60px;
+}
+
+@media only screen and (min-width: 391px) and (max-width: 1770px) {
+  .menu-container.js-open-menu {
+    padding-top: 0;
+  }
+}
+
+.menu-mobile-wrapper {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  position: relative;
+  height: 100%;
+  padding-top: 144px;
+  padding-bottom: 452px;
+  background-color: #16344c;
+}
+
+.menu-mobile-wrapper > ul {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.menu-mobile-wrapper > ul > li:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.menu-mobile-wrapper > ul > li > a {
+  color: var(--main-color);
+  font-family: var(--accent-font-family);
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 1.16;
+}
+
+.menu-mobile-wrapper > ul > li > a:hover,
+.menu-mobile-wrapper > ul > li > a:focus {
+  color: #b5e5f3;
+}
+
+.btn-close {
+  background-color: transparent;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  border: 1px solid transparent;
+  cursor: pointer;
+
+  position: absolute;
+  top: 12px;
+  right: 18px;
+}
+
+.btn-close__icon {
+  fill: var(--main-color);
+}
+
+.btn-close__icon:hover,
+.btn-close__icon:focus {
+  fill: #b5e5f3;
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .btn-close {
+    top: 30px;
+    right: 17px;
+  }
+}
+
+.modal-search-wrapper {
+  display: none;
+}
+
+.modal-search-wrapper.no-hidden {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  visibility: visible;
+  background-color: rgba(25, 25, 25, 0.49);
+}
+
+.modal {
+  position: absolute;
+  top: 65px;
+  left: 0;
+  /* max-width: 390px; */
+  padding-left: 16px;
+}
+
+.modal-search {
+  position: relative;
+}
+.modal-search-text {
+  padding: 10px 65px;
+  border-radius: 8px;
+
+  background: rgb(252, 252, 252);
+
+  color: rgb(160, 160, 160);
+  font-family: var(--accent-font-family);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.17;
+}
+
+.modal-search > .search-icon-modal {
+  position: absolute;
+  top: 1px;
+  left: 24px;
+}
+
+.btn-search {
+  position: absolute;
+  top: -1px;
+  left: 7px;
+  padding: 1px 12px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
+
+.modal-search-text::placeholder {
+  color: rgb(160, 160, 160);
+  font-family: var(--accent-font-family);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.17;
 }
 
 /*!==================================================*/
