--- a/css/my-account.css
+++ b/css/my-account.css
@@ -778,6 +778,7 @@ input::placeholder {
 }
 
 .modal-credit-card {
+  display: none;
   position: fixed;
   background-color: rgba(39, 39, 39, 0.49);
   left: 0;
@@ -786,15 +787,29 @@ input::placeholder {
   height: 100%;
 }
 
+.modal-credit-card.js-modal {
+  display: block;
+}
+
 .modal-backdrop {
   position: absolute;
   left: 0;
   bottom: 0;
   width: 100%;
   border-radius: 8px 8px 0 0;
+  padding: 16px;
 
   background-color: var(--main-color);
   min-height: 391px;
+}
+
+.modal-backdrop .btn-close__icon {
+  fill: var(--border-color);
+}
+
+.modal-backdrop .btn-close__icon:hover,
+.modal-backdrop .btn-close__icon:focus {
+  fill: var(--accent-color);
 }
 
 /*!======================================================*/
