added modal btn-cross

--- a/css/my-account.css
+++ b/css/my-account.css
@@ -833,6 +833,10 @@ input::placeholder {
   margin-bottom: 32px;
 }
 
+.btn-cross__icon {
+  fill: #000000;
+}
+
 /*!======================================================*/
 /* FOOTER */
 
