--- a/css/my-account.css
+++ b/css/my-account.css
@@ -833,6 +833,11 @@ input::placeholder {
   margin-bottom: 32px;
 }
 
+.btn-cross {
+  border: none;
+  cursor: pointer;
+}
+
 .btn-cross__icon {
   fill: #000000;
 }
