--- a/css/my-account.css
+++ b/css/my-account.css
@@ -900,6 +900,30 @@ button.icons {
   padding: 0;
 }
 
+.container-filters {
+  display: flex;
+  gap: 24px;
+}
+
+.btn-filter {
+  background-color: transparent;
+  border: 2px solid var(--accent-color);
+  border-radius: 25px;
+  padding: 12px 20px;
+
+  color: var(--border-color);
+  font-family: var(--accent-font-family);
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.125;
+}
+
+.btn-filter:hover,
+.btn-filter:focus {
+  background-color: var(--accent-color);
+  color: var(--main-color);
+}
+
 /*!======================================================*/
 /* FOOTER */
 
