--- a/css/my-account.css
+++ b/css/my-account.css
@@ -634,7 +634,6 @@ html {
   text-align: center;
 
   margin-top: 37px;
-  margin-bottom: 48px;
 }
 
 .sign-in__item-container {
@@ -740,15 +739,15 @@ fieldset > .input-form::placeholder {
   padding: 0;
 }
 
-.interface-list li {
+.interface-list__one-item {
   margin-bottom: 24px;
 }
 
-.interface-list li:first-child .interface-list__item {
+.interface-list__one-item:first-child .interface-list__item {
   color: #5e92b6;
 }
 
-.interface-list li:first-child {
+.interface-list__one-item:first-child {
   margin-top: 40px;
 }
 
@@ -905,6 +904,8 @@ button.icons {
 .container-filters {
   display: flex;
   gap: 24px;
+  margin-top: 32px;
+  margin-bottom: 32px;
 }
 
 .btn-filter {
@@ -926,8 +927,10 @@ button.icons {
   color: var(--main-color);
 }
 
-.card-images {
+.card-images__list {
   display: flex;
+  gap: 17.7px;
+  margin-top: 16px;
 }
 
 .card-small-tube {
@@ -973,6 +976,20 @@ button.icons {
 
 .cards-history__price {
   color: var(--border-color);
+}
+
+.cards-history__btn-icon {
+  transform: rotate(90deg);
+  border: none;
+  background-color: transparent;
+}
+
+.card-images__item {
+  border-radius: 8px;
+
+  box-shadow: 1px 1px 2px 0px rgba(125, 129, 137, 0.12),
+    -1px -1px 2px 0px rgba(125, 129, 137, 0.12);
+  background: rgb(252, 252, 252);
 }
 
 /*!======================================================*/
