--- a/css/my-account.css
+++ b/css/my-account.css
@@ -632,8 +632,6 @@ html {
   font-weight: 400;
   line-height: 1.3;
   text-align: center;
-
-  margin-top: 37px;
 }
 
 .sign-in__item-container {
@@ -990,6 +988,10 @@ button.icons {
   box-shadow: 1px 1px 2px 0px rgba(125, 129, 137, 0.12),
     -1px -1px 2px 0px rgba(125, 129, 137, 0.12);
   background: rgb(252, 252, 252);
+}
+
+.hidden {
+  display: none;
 }
 
 /*!======================================================*/
