--- a/css/my-account.css
+++ b/css/my-account.css
@@ -978,6 +978,19 @@ button.icons {
   margin-bottom: 24px;
 }
 
+.card-history__total::before {
+  content: '';
+
+  margin-top: 23.5px;
+  margin-bottom: 20px;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: var(--accent-color);
+  height: 1px;
+}
+
 .card-history__total-text {
   display: flex;
   justify-content: space-between;
