--- a/css/contact.css
+++ b/css/contact.css
@@ -578,3 +578,133 @@ html {
   font-weight: 400;
   line-height: 1.17;
 }
+
+/* FOOTER */
+
+.footer {
+  background-color: var(--bg-color);
+}
+
+.footer-list {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+
+  margin-top: 32px;
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .footer-list {
+    flex-direction: row;
+    gap: 32px;
+    margin-top: 0;
+  }
+}
+
+.footer-link {
+  color: rgba(252, 252, 252, 1);
+  text-decoration: none;
+
+  font-family: var(--accent-font-family);
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.5;
+}
+
+.footer-link:hover,
+.footer-link:focus {
+  color: #b5e5f3;
+}
+
+.social-networks {
+  margin-left: auto;
+  margin-top: -30px;
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .social-networks {
+    margin-left: 10em;
+    margin-top: 0;
+  }
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .logo.footer {
+    margin-top: 32px;
+  }
+}
+
+.footer-list-networks {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-wrapper {
+  display: flex;
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .footer-wrapper {
+    display: inline-flex;
+    justify-content: center;
+    margin-left: 124px;
+  }
+}
+
+.footer-text {
+  font-family: var(--accent-font-family);
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 1.13;
+
+  color: rgba(252, 252, 252, 1);
+
+  text-align: center;
+  margin-top: 40px;
+  padding-bottom: 32px;
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .footer-text {
+    margin-right: 100px;
+  }
+}
+
+.list-social::before {
+  content: '';
+
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: rgba(252, 252, 252, 1);
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .list-social-wrapper {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+
+  .list-social::before {
+    display: none;
+  }
+}
+
+.list-social {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 16px;
+
+  margin-top: 40px;
+}
+.social-icon {
+  fill: var(--main-color);
+  stroke: #16344c;
+}
+
+.social-icon:hover,
+.social-icon:focus {
+  fill: #b5e5f3;
+  stroke: var(--main-color);
+}
