--- a/css/contact.css
+++ b/css/contact.css
@@ -64,7 +64,7 @@ img {
   margin: 0;
 }
 
-.visually-hidden {
+.checkbox {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -577,6 +577,198 @@ html {
   font-size: 18px;
   font-weight: 400;
   line-height: 1.17;
+}
+
+/*MAIN*/
+.bradcrumbs {
+  display: flex;
+  margin-top: 24px;
+}
+
+.bradcrumbs__link {
+  font-family: Liberation Sans;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.17;
+}
+
+.bradcrumbs__link:visited {
+  color: #000000;
+}
+
+.bradcrumbs__link:hover,
+.bradcrumbs__link:focus {
+  text-decoration: underline;
+  text-decoration-color: #000000;
+}
+
+.bradcrumbs span {
+  margin-left: 24px;
+  margin-right: 24px;
+}
+
+.sign-in__title {
+  color: rgb(59, 97, 154);
+  font-family: Candal;
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 1.3;
+  text-align: center;
+
+  margin-top: 37px;
+  margin-bottom: 48px;
+}
+
+@media only screen and (min-width: 358px) and (max-width: 1924px) {
+  .form-container {
+    max-width: 418px;
+    padding-left: 24px;
+    padding-right: 24px;
+    margin: 0 auto;
+  }
+}
+
+.sign-in__subtext {
+  color: rgb(39, 39, 39);
+  font-family: Liberation Sans;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+}
+
+input {
+  width: 100%;
+  padding: 12px 16px;
+
+  margin-top: 8px;
+  box-sizing: border-box;
+  border: 1px solid rgba(94, 146, 182, 0.55);
+  border-radius: 10px;
+}
+
+input,
+input::placeholder {
+  color: rgb(39, 39, 39);
+  font-family: Liberation Sans;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.17;
+
+  text-align: left;
+}
+
+.sign-in__link,
+.sign-in__label {
+  color: rgb(39, 39, 39);
+  font-family: Liberation Sans;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+}
+
+.sign-in__link.underlink {
+  text-decoration: underline;
+  display: flex;
+  justify-content: center;
+}
+
+.sign-in__link.underlink:hover,
+.sign-in__link.underlink:focus {
+  color: #5e92b6;
+}
+
+.sign-in.btn {
+  width: 100%;
+  background: #5e92b6;
+
+  margin-top: 53px;
+  margin-bottom: 8px;
+}
+
+.sign-in.btn:hover,
+.sign-in.btn:focus {
+  background: #b5e5f3;
+  color: #272727;
+}
+
+.label-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  margin-top: 16px;
+}
+
+.sign-in__under-form {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 32px;
+
+  width: 100%;
+
+  color: rgb(39, 39, 39);
+  font-family: Liberation Sans;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 1.18;
+}
+
+.sign-in__under-form::before,
+.sign-in__under-form::after {
+  content: '';
+  display: block;
+  margin-left: 17px;
+  margin-right: 17px;
+  width: 61px;
+  height: 0.5px;
+  background-color: rgba(94, 146, 182, 0.55);
+}
+
+.sign-in__label {
+  display: flex;
+  align-items: center;
+}
+
+.checkbox-icon {
+  flex-shrink: 0;
+  width: 24px;
+  height: 24px;
+  margin-right: 8px;
+  border: 1px solid #16344c;
+  border-radius: 5px;
+}
+
+.checkbox:checked ~ .checkbox-icon {
+  background-image: url(../img/icons/Icon-checked.svg);
+  background-repeat: no-repeat;
+
+  background-position: center;
+
+  border-radius: 5px;
+}
+
+.checkbox:focus ~ .checkbox-icon {
+  outline: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 5px;
+}
+
+.sign-in-networks__list {
+  display: flex;
+  justify-content: center;
+  gap: 21px;
+
+  margin-top: 32px;
+  margin-bottom: 96px;
+}
+
+.sign-in-networks__icon {
+  fill: #16344c;
+}
+
+.sign-in-networks__icon:hover,
+.sign-in-networks__icon:focus {
+  fill: #5e92b6;
 }
 
 /* FOOTER */
