raplace card-container from card-container__box

--- a/css/shop.css
+++ b/css/shop.css
@@ -670,7 +670,7 @@ html {
   color: var(--subtitle-color);
 }
 
-.card-container {
+.card-container__box {
   max-width: 233px;
   max-height: 333px;
 
