--- a/css/shop.css
+++ b/css/shop.css
@@ -706,6 +706,8 @@ html {
 }
 
 .card-container__link {
+  display: block;
+
   font-family: var(--accent-font-family);
   font-size: 24px;
   font-weight: 700;
