--- a/css/home.css
+++ b/css/home.css
@@ -1309,8 +1309,17 @@ html {
 }
 
 .social-networks {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-left: auto;
   margin-top: -30px;
+  gap: 16px;
+}
+
+.logo.footer {
+  width: 77px;
+  height: 47px;
 }
 
 @media only screen and (min-width: 1024px) and (max-width: 1925px) {
