--- a/css/home.css
+++ b/css/home.css
@@ -11,6 +11,7 @@
 
   --main-font-family: 'Candal';
   --accent-font-family: 'Liberation Sans';
+  --inter-font-family: 'Inter';
 }
 
 body {
@@ -401,7 +402,7 @@ html {
   align-items: center;
   justify-content: center;
 
-  font-family: Inter;
+  font-family: var(--inter-font-family);
   font-weight: 400;
   line-height: 100%;
 
@@ -595,9 +596,9 @@ html {
   padding: 10px 65px;
   border-radius: 8px;
 
-  background: rgb(252, 252, 252);
+  background: var(--main-color);
 
-  color: rgb(160, 160, 160);
+  color: var(--grey-color);
   font-family: var(--accent-font-family);
   font-size: 18px;
   font-weight: 400;
@@ -621,7 +622,7 @@ html {
 }
 
 .modal-search-text::placeholder {
-  color: rgb(160, 160, 160);
+  color: var(--grey-color);
   font-family: var(--accent-font-family);
   font-size: 18px;
   font-weight: 400;
@@ -653,7 +654,7 @@ html {
 }
 
 .hero-title {
-  font-family: Candal;
+  font-family: var(--main-font-family);
   font-size: 48px;
   font-weight: 400;
   line-height: 0.77;
@@ -701,7 +702,7 @@ html {
 }
 
 .collection-title {
-  font-family: Candal;
+  font-family: var(--main-font-family);
   font-size: 30px;
   font-weight: 400;
   line-height: 1.6;
@@ -849,7 +850,7 @@ html {
 }
 
 .exclusive-deals-title {
-  font-family: Candal;
+  font-family: var(--main-font-family);
   font-size: 30px;
   font-weight: 400;
   line-height: 1.3;
@@ -1179,7 +1180,7 @@ html {
 }
 
 .list-title {
-  font-family: Candal;
+  font-family: var(--main-font-family);
   font-weight: 400;
   font-size: 24px;
   line-height: 1.3;
@@ -1209,7 +1210,7 @@ html {
 /* Our blog */
 
 .our-blog-title {
-  font-family: Candal;
+  font-family: var(--main-font-family);
   font-size: 30px;
   font-weight: 400;
   line-height: 1.3;
