--- a/css/shop-category.css
+++ b/css/shop-category.css
@@ -624,6 +624,15 @@ html {
 
 /* SECTION EXCLUSIVE-DEALS */
 
+.paginations {
+  padding: 36px 0 96px 0;
+}
+
+.paginations-buttons {
+  display: flex;
+  justify-content: space-around;
+}
+
 @media only screen and (min-width: 1024px) and (max-width: 1925px) {
   .exclusive-deals {
     position: relative;
